--- a/styles/base.css
+++ b/styles/base.css
@@ -1,8 +1,73 @@
 :root {
-	--background-color: #f4f4f4; /* Fundo suave */
-	--primary-color: #2b7a4b; /* Verde escuro (agricultura) */
-	--secondary-color: #264653; /* Tom terroso */
-	--highlight-color: #f4a261; /* Amarelo ou dourado (alimento) */
-	--card-bg-color: #e9c46a; /* Verde claro para os cartões */
-	--text-color: #333; /* Cor de texto neutra */
+	--primary-color: #957408;
+	--secondary-color: #ffc107;
+	--background-color: #f9f9f9;
+	--text-color: #333;
+	--light-text: #666;
+	--gradient: linear-gradient(135deg, #a77406, #c99404);
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: "Roboto", sans-serif;
+	background: var(--background-color);
+	color: var(--text-color);
+	line-height: 1.6;
+}
+
+.container {
+	width: 90%;
+	max-width: 1200px;
+	margin: auto;
+}
+
+.header {
+	background: var(--gradient);
+	color: white;
+	padding: 15px 15px;
+	position: sticky;
+	top: 0;
+	z-index: 1000;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.nav {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 15px;
+}
+
+.nav a {
+	color: white;
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: 500;
+	transition: color 0.3s;
+	text-align: center;
+}
+
+.nav a:hover {
+	color: var(--secondary-color);
+}
+
+.footer {
+	background: var(--gradient);
+	color: white;
+	text-align: center;
+	padding: 20px;
+	font-size: 0.9rem;
+}
+
+.footer p {
+	margin: 0;
+	color: white;
 }
